--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="ball" onclick="onBallClick()">100</div>
     <script src="js.js"></script>
     
 </body>
