Update index.html to pass clicked element to handler

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="ball" onclick="onBallClick()">100</div>
+    <div class="ball" onclick="onBallClick(this)"><span>100</span></div>
     <script src="js.js"></script>
     
 </body>
