Refactor ball click handler to use random size increments and add utility functions for random color and integer generation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="ball" onclick="onBallClick(this)"><span>100</span></div>
     <script src="js.js"></script>
+    <script src="util.js"></script>
     
 </body>
 </html>
