--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="ball" onclick="onBallClick(this)"><span>100</span></div>
+        <div class="ball2" onclick="onBallClick(this)"><span></span></div>
+
     <script src="js.js"></script>
+    <script src="util.js"></script>
     
 </body>
 </html>
