Refactor ball elements in HTML and update styles for better organization; enhance JavaScript to change colors of other balls on click

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="ball" onclick="onBallClick(this)"><span>100</span></div>
-        <div class="ball2" onclick="onBallClick(this)"><span></span></div>
+    <div class="ball ball1" onclick="onBallClick(this)"><span>100</span></div>
+    <div class="ball ball2" onclick="onBallClick(this)"><span>100</span></div>
+    <div class="ball ball3" onclick="changeOthersColors(this)"></div>
+
 
     <script src="js.js"></script>
     <script src="util.js"></script>
