Add click functionality to additional balls and update styles for better organization

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="ball ball1" onclick="onBallClick(this)"><span>100</span></div>
     <div class="ball ball2" onclick="onBallClick(this)"><span>100</span></div>
-    <div class="ball ball3" onclick="changeOthersColors(this)"></div>
+    <div class="ball ball3" onclick="changeOthersColors(this)">click</div>
+    <div class="ball ball4" onclick="reduceDiameterOfOthers(this)">click</div>
+    <div class="ball ball5" onclick="changePageColor()">click</div>
+
+
 
 
     <script src="js.js"></script>
