Add reset functionality and style adjustments for ball elements

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="ball ball3" onclick="changeOthersColors(this)">click</div>
     <div class="ball ball4" onclick="reduceDiameterOfOthers(this)">click</div>
     <div class="ball ball5" onclick="changePageColor()">click</div>
+    <div class="ball ball6" onclick="reset()">RESET</div>
+
 
 
 
